Added loads of debug, fixed Gradle, Fixed //set and //cut command

--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,13 +1,13 @@
 repositories {
     flatDir {dirs 'lib'}
-    maven {url "http://ci.athion.net/job/PlotSquared-Legacy/ws/mvn/"}
 }
 dependencies {
     testCompile 'junit:junit:4.12'
     compile 'org.yaml:snakeyaml:1.16'
     compile 'com.google.code.gson:gson:2.2.4'
-    compile 'net.fabiozumbi12:redprotect:1.9.6'
-    compile group: "com.plotsquared", name: "plotsquared-api", version: "latest"
+//    compile 'net.fabiozumbi12:redprotect:1.9.6' @TODO disabled 
+    compile name: 'plotsquared-1.0-SNAPSHOT'
+//    compile group: "com.plotsquared", name: "plotsquared-api", version: "latest"
     compile 'org.primesoft:BlocksHub:2.0'
     compile 'com.github.luben:zstd-jni:1.1.1'
 //    compile 'org.javassist:javassist:3.22.0-CR1'
@@ -29,7 +29,7 @@ processResources {
 
 jar.archiveName="fawe-api-${project.parent.version}.jar"
 jar.destinationDir = file '../mvn/com/boydti/fawe-api/' + project.parent.version
-task createPom << {
+task createPom {
     pom {
         project {
             groupId 'com.boydti'
