--- a/build.gradle
+++ b/build.gradle
@@ -99,9 +99,13 @@ subprojects {
         maven {url "http://repo.dmulloy2.net/content/groups/public/"}
         maven {url "https://repo.destroystokyo.com/repository/maven-public//"}
         //maven {url "http://ci.emc.gs/nexus/content/groups/aikar/" }
-        maven {url "http://ci.athion.net/job/PlotSquared-Legacy/ws/mvn/"}
+//        maven {url "http://ci.athion.net/job/PlotSquared-Legacy/ws/mvn/"}
         mavenLocal()
-        maven {url "http://empcraft.com/maven2"}
+//        maven {url "http://empcraft.com/maven2"}
+        maven {
+            name "forge"
+            url "http://files.minecraftforge.net/maven"
+        }
         maven {url "https://hub.spigotmc.org/nexus/content/groups/public/"}
         maven {url "https://maven.enginehub.org/repo/"}
         maven {url "https://repo.maven.apache.org/maven2"}
